Added some frontend for the transaction
