# server/api/Features/Transactions/Dtos/CreateTransactionDto.cs
@@ -2,7 +2,6 @@
 
 public class CreateTransactionDto
 {
-    public Guid PlayerId { get; set; }
     public int Amount { get; set; }
     public string MobilePayTransactionNumber { get; set; }
 }
